diagweave/tests/ui/derive/missing_error_attr.rs
use diagweave::Error;

#[derive(Debug, Error)]
enum MissingMessage {
    NoMessage,
}

fn main() {}